--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -1,13 +1,35 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>perfil</ion-title>
+<ion-header>
+  <ion-toolbar class="toolbar-perfil">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Perfil</ion-title>
   </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">perfil</ion-title>
-    </ion-toolbar>
   </ion-header>
+
+<ion-content class="ion-padding">
+  <div class="perfil-header">
+    <ion-avatar class="avatar">
+      <ion-icon name="person-circle-outline"></ion-icon>
+    </ion-avatar>
+    <div class="datos">
+      <div class="nombre">{{ nombre }}</div>
+      <div class="rol">{{ rol | titlecase }}</div>
+    </div>
+  </div>
+
+  <ion-list inset>
+    <ion-item button detail>
+      <ion-icon name="pencil-outline" slot="start"></ion-icon>
+      <ion-label>Editar perfil</ion-label>
+    </ion-item>
+    <ion-item button detail>
+      <ion-icon name="lock-closed-outline" slot="start"></ion-icon>
+      <ion-label>Cambiar contraseña</ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-button expand="block" color="danger" (click)="cerrarSesion()">
+    Cerrar sesión
+  </ion-button>
 </ion-content>
