--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -14,7 +14,7 @@
     <!-- botón de perfil -->
     <ion-buttons slot="end">
       <ion-button (click)="abrirPerfil()">
-        <ion-icon name="person-circle-outline" size="large"></ion-icon>
+<ion-icon src="assets/icons/user-circle.svg" size="large"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -33,25 +33,25 @@
 
     <div class="accesos-rapidos">
       <ion-button fill="clear" class="tile">
-        <ion-icon name="document-text-outline"></ion-icon>
+<ion-icon src="assets/icons/file-description.svg"></ion-icon>
         <span>Documentos</span>
       </ion-button>
       <ion-button fill="clear" class="tile">
-        <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
+<ion-icon src="assets/icons/message.svg"></ion-icon>
         <span>Observaciones</span>
       </ion-button>
       <ion-button fill="clear" class="tile">
-        <ion-icon name="bar-chart-outline"></ion-icon>
+<ion-icon src="assets/icons/chart-bar-popular.svg"></ion-icon>
         <span>Reportes</span>
       </ion-button>
       <ion-button fill="clear" class="tile">
-        <ion-icon name="people-outline"></ion-icon>
+<ion-icon src="assets/icons/users.svg"></ion-icon>
         <span>Clientes</span>
       </ion-button>
     </div>
 
     <ion-button expand="block" class="btn-nuevo-proyecto">
-      <ion-icon slot="start" name="add-outline"></ion-icon>
+<ion-icon slot="start" src="assets/icons/plus.svg"></ion-icon>
       Agregar un nuevo proyecto
     </ion-button>
 
@@ -86,15 +86,15 @@
 
     <div class="accesos-rapidos">
       <ion-button fill="clear" class="tile">
-        <ion-icon name="document-text-outline"></ion-icon>
+<ion-icon src="assets/icons/file-description.svg"></ion-icon>
         <span>Documentos</span>
       </ion-button>
       <ion-button fill="clear" class="tile">
-        <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
+<ion-icon src="assets/icons/message.svg"></ion-icon>
         <span>Observaciones</span>
       </ion-button>
       <ion-button fill="clear" class="tile">
-        <ion-icon name="bar-chart-outline"></ion-icon>
+<ion-icon src="assets/icons/chart-bar-popular.svg"></ion-icon>
         <span>Reportes</span>
       </ion-button>
     </div>
