--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -47,6 +47,10 @@
   --highlight-color-focused: transparent;
   --border-color: transparent;
   --border-color-focused: transparent;
+  /* Color del texto y del caret del buscador */
+  --color: #262626;
+  color: #262626;
+  caret-color: #262626;
   text-decoration: none;
 }
 .buscador-campo::part(native) {
@@ -54,8 +58,10 @@
   border: 0;
   box-shadow: none;
   outline: none;
+  color: #262626;
   text-decoration: none;
 }
+.buscador-campo input { color: #262626; caret-color: #262626; }
 .buscador-campo input:focus,
 .buscador-campo:focus,
 .buscador-campo:focus-visible {
@@ -71,9 +77,7 @@
   margin: 10px 4px 14px;
 }
 
-.tile {
-  text-align: center;
-}
+.tile { text-align: center; display: flex; flex-direction: column; align-items: center; justify-content: center; }
 
 .tile::part(native) {
   background: #ffffff;
