--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -51,7 +51,7 @@
     </div>
 
     <ion-button expand="block" class="btn-nuevo-proyecto">
-      <ion-icon slot="start" name="add-circle-outline"></ion-icon>
+      <ion-icon slot="start" src="assets/icons/plus.svg"></ion-icon>
       Agregar un nuevo proyecto
     </ion-button>
 
@@ -124,3 +124,4 @@
     </div>
   </ng-container>
 </ion-content>
+
