--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -32,22 +32,14 @@
     </div>
 
     <div class="accesos-rapidos">
-      <ion-button fill="clear" class="tile">
-        <ion-icon src="assets/icons/file-description.svg"></ion-icon>
-        <span>Documentos</span>
-      </ion-button>
-      <ion-button fill="clear" class="tile">
-        <ion-icon src="assets/icons/message.svg"></ion-icon>
-        <span>Observaciones</span>
-      </ion-button>
-      <ion-button fill="clear" class="tile">
-        <ion-icon src="assets/icons/chart-bar-popular.svg"></ion-icon>
-        <span>Reportes</span>
-      </ion-button>
-      <ion-button fill="clear" class="tile">
-        <ion-icon src="assets/icons/users.svg"></ion-icon>
-        <span>Clientes</span>
-      </ion-button>
+      <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/file-description.svg"></ion-icon>
+        <span>Documentos</span></div></ion-button>
+      <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/message.svg"></ion-icon>
+        <span>Observaciones</span></div></ion-button>
+      <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/chart-bar-popular.svg"></ion-icon>
+        <span>Reportes</span></div></ion-button>
+      <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/users.svg"></ion-icon>
+        <span>Clientes</span></div></ion-button>
     </div>
 
     <ion-button expand="block" class="btn-nuevo-proyecto">
@@ -85,18 +77,12 @@
     <div class="titulo-cliente">Proyectos Contratados</div>
 
     <div class="accesos-rapidos">
-      <ion-button fill="clear" class="tile">
-        <ion-icon src="assets/icons/file-description.svg"></ion-icon>
-        <span>Documentos</span>
-      </ion-button>
-      <ion-button fill="clear" class="tile">
-        <ion-icon src="assets/icons/message.svg"></ion-icon>
-        <span>Observaciones</span>
-      </ion-button>
-      <ion-button fill="clear" class="tile">
-        <ion-icon src="assets/icons/chart-bar-popular.svg"></ion-icon>
-        <span>Reportes</span>
-      </ion-button>
+      <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/file-description.svg"></ion-icon>
+        <span>Documentos</span></div></ion-button>
+      <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/message.svg"></ion-icon>
+        <span>Observaciones</span></div></ion-button>
+      <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/chart-bar-popular.svg"></ion-icon>
+        <span>Reportes</span></div></ion-button>
     </div>
 
     <ion-segment [(ngModel)]="segment" class="seg-proyectos">
@@ -124,4 +110,5 @@
     </div>
   </ng-container>
 </ion-content>
+
 
