--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -99,9 +99,8 @@
   border-radius: 12px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.1);
   width: 100%;
-  height: auto;
-  aspect-ratio: 1 / 1; /* mismo ancho y alto */
   box-sizing: border-box;
+  padding: 30px 12px; /* alto no automático con padding vertical */
   display: flex;
   flex-direction: column;
   align-items: center;
