--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -32,10 +32,18 @@
     </div>
 
     <div class="accesos-rapidos">
-      <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/file-description.svg"></ion-icon>
-        <span>Documentos</span></div></ion-button>
-      <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/message.svg"></ion-icon>
-        <span>Observaciones</span></div></ion-button>
+      <ion-button fill="clear" class="tile">
+        <div class="tile-content">
+          <ion-icon src="assets/icons/file-description.svg"></ion-icon>
+          <span>Documentos</span>
+        </div>
+      </ion-button>
+      <ion-button fill="clear" class="tile">
+        <div class="tile-content">
+          <ion-icon src="assets/icons/message.svg"></ion-icon>
+          <span>Observaciones</span>
+        </div>
+      </ion-button>
       <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/chart-bar-popular.svg"></ion-icon>
         <span>Reportes</span></div></ion-button>
       <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/users.svg"></ion-icon>
@@ -61,8 +69,8 @@
           <div class="estado">Planificación</div>
         </div>
         <div class="progreso">
-          <ion-progress-bar value="0.85"></ion-progress-bar>
-          <span>85%</span>
+          <ion-progress-bar value="0.25"></ion-progress-bar>
+          <span>25%</span>
         </div>
         <div class="acciones">
           <div class="obs">Observaciones: <b>2</b></div>
