--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -11,7 +11,6 @@
     padding: 40px 30px;
     width: 100%;
     height: 100%;
-    max-width: 400px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
 
@@ -31,7 +30,7 @@
 
 .subtitulo-app {
     font-size: 16px;
-    color: #1e5f74;
+    color: #044C63;
     margin: 0 1rem;
 }
 
