--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -52,7 +52,7 @@
     <div class="empresa-title">Empresa</div>
     <div class="empresa-row"><span class="label">Razón social</span><span class="value">{{ empresa.razonSocial }}</span></div>
     <div class="empresa-row"><span class="label">RUC</span><span class="value">{{ empresa.ruc }}</span></div>
-    <div class="empresa-row"><span class="label">Dirección</span><span class="value">{{ empresa['dirección'] }}</span></div>
+    <div class="empresa-row"><span class="label">Dirección</span><span class="value">{{ empresa['direccion'] }}</span></div>
     <div class="empresa-row"><span class="label">Teléfono</span><span class="value">{{ empresa.telefono }}</span></div>
     <div class="empresa-row"><span class="label">Tipo</span><span class="value">{{ empresa.tipoEntidad }}</span></div>
     <div class="empresa-row"><span class="label">Estado</span><span class="value">{{ empresa.estado | titlecase }}</span></div>
