--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -46,7 +46,7 @@
       </ion-button>
       <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/chart-bar-popular.svg"></ion-icon>
         <span>Reportes</span></div></ion-button>
-      <ion-button fill="clear" class="tile"><div class="tile-content"><ion-icon src="assets/icons/users.svg"></ion-icon>
+      <ion-button fill="clear" class="tile" routerLink="/clientes"><div class="tile-content"><ion-icon src="assets/icons/users.svg"></ion-icon>
         <span>Clientes</span></div></ion-button>
     </div>
 
