Antes del caos 2

--- a/src/app/pages/empleado/clientes/clientes.page.html
+++ b/src/app/pages/empleado/clientes/clientes.page.html
@@ -4,6 +4,12 @@
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
     <ion-title>Clientes</ion-title>
+    <ion-buttons slot="end">
+      <ion-button routerLink="/add-cliente" routerDirection="forward">
+        <ion-icon name="person-add-outline" slot="start"></ion-icon>
+        Agregar cliente
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
   </ion-header>
 
